Package_Tools/glib/Package_Tools/include-C/glib-2.0/glib/in_arbeit/giochannel.pp


procedure g_io_channel_init(channel:PGIOChannel);cdecl;external;
function g_io_channel_ref(channel:PGIOChannel):PGIOChannel;cdecl;external;
procedure g_io_channel_unref(channel:PGIOChannel);cdecl;external;
function g_io_channel_read(channel:PGIOChannel; buf:Pgchar; count:Tgsize; bytes_read:Pgsize):TGIOError;cdecl;external;
(* Const before type ignored *)
function g_io_channel_write(channel:PGIOChannel; buf:Pgchar; count:Tgsize; bytes_written:Pgsize):TGIOError;cdecl;external;
function g_io_channel_seek(channel:PGIOChannel; offset:Tgint64; _type:TGSeekType):TGIOError;cdecl;external;
procedure g_io_channel_close(channel:PGIOChannel);cdecl;external;
function g_io_channel_shutdown(channel:PGIOChannel; flush:Tgboolean; err:PPGError):TGIOStatus;cdecl;external;
function g_io_add_watch_full(channel:PGIOChannel; priority:Tgint; condition:TGIOCondition; func:TGIOFunc; user_data:Tgpointer; 
           notify:TGDestroyNotify):Tguint;cdecl;external;
function g_io_create_watch(channel:PGIOChannel; condition:TGIOCondition):PGSource;cdecl;external;
function g_io_add_watch(channel:PGIOChannel; condition:TGIOCondition; func:TGIOFunc; user_data:Tgpointer):Tguint;cdecl;external;
{ character encoding conversion involved functions.
  }
procedure g_io_channel_set_buffer_size(channel:PGIOChannel; size:Tgsize);cdecl;external;
function g_io_channel_get_buffer_size(channel:PGIOChannel):Tgsize;cdecl;external;
function g_io_channel_get_buffer_condition(channel:PGIOChannel):TGIOCondition;cdecl;external;
function g_io_channel_set_flags(channel:PGIOChannel; flags:TGIOFlags; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_get_flags(channel:PGIOChannel):TGIOFlags;cdecl;external;
(* Const before type ignored *)
procedure g_io_channel_set_line_term(channel:PGIOChannel; line_term:Pgchar; length:Tgint);cdecl;external;
(* Const before type ignored *)
function g_io_channel_get_line_term(channel:PGIOChannel; length:Pgint):Pgchar;cdecl;external;
procedure g_io_channel_set_buffered(channel:PGIOChannel; buffered:Tgboolean);cdecl;external;
function g_io_channel_get_buffered(channel:PGIOChannel):Tgboolean;cdecl;external;
(* Const before type ignored *)
function g_io_channel_set_encoding(channel:PGIOChannel; encoding:Pgchar; error:PPGError):TGIOStatus;cdecl;external;
(* Const before type ignored *)
function g_io_channel_get_encoding(channel:PGIOChannel):Pgchar;cdecl;external;
procedure g_io_channel_set_close_on_unref(channel:PGIOChannel; do_close:Tgboolean);cdecl;external;
function g_io_channel_get_close_on_unref(channel:PGIOChannel):Tgboolean;cdecl;external;
function g_io_channel_flush(channel:PGIOChannel; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_read_line(channel:PGIOChannel; str_return:PPgchar; length:Pgsize; terminator_pos:Pgsize; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_read_line_string(channel:PGIOChannel; buffer:PGString; terminator_pos:Pgsize; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_read_to_end(channel:PGIOChannel; str_return:PPgchar; length:Pgsize; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_read_chars(channel:PGIOChannel; buf:Pgchar; count:Tgsize; bytes_read:Pgsize; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_read_unichar(channel:PGIOChannel; thechar:Pgunichar; error:PPGError):TGIOStatus;cdecl;external;
(* Const before type ignored *)
function g_io_channel_write_chars(channel:PGIOChannel; buf:Pgchar; count:Tgssize; bytes_written:Pgsize; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_write_unichar(channel:PGIOChannel; thechar:Tgunichar; error:PPGError):TGIOStatus;cdecl;external;
function g_io_channel_seek_position(channel:PGIOChannel; offset:Tgint64; _type:TGSeekType; error:PPGError):TGIOStatus;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function g_io_channel_new_file(filename:Pgchar; mode:Pgchar; error:PPGError):PGIOChannel;cdecl;external;
{ Error handling  }
function g_io_channel_error_quark:TGQuark;cdecl;external;
function g_io_channel_error_from_errno(en:Tgint):TGIOChannelError;cdecl;external;
{ On Unix, IO channels created with this function for any file
 * descriptor or socket.
 *
 * On Win32, this can be used either for files opened with the MSVCRT
 * (the Microsoft run-time C library) _open() or _pipe, including file
 * descriptors 0, 1 and 2 (corresponding to stdin, stdout and stderr),
 * or for Winsock SOCKETs. If the parameter is a legal file
 * descriptor, it is assumed to be such, otherwise it should be a
 * SOCKET. This relies on SOCKETs and file descriptors not
 * overlapping. If you want to be certain, call either
 * g_io_channel_win32_new_fd() or g_io_channel_win32_new_socket()
 * instead as appropriate.
 *
 * The term file descriptor as used in the context of Win32 refers to
 * the emulated Unix-like file descriptors MSVCRT provides. The native
 * corresponding concept is file HANDLE. There isn't as of yet a way to
 * get GIOChannels for Win32 file HANDLEs.
  }
function g_io_channel_unix_new(fd:longint):PGIOChannel;cdecl;external;
function g_io_channel_unix_get_fd(channel:PGIOChannel):Tgint;cdecl;external;
{ Hook for GClosure / GSource integration. Don't touch  }
  var
    g_io_watch_funcs : TGSourceFuncs;cvar;public;
{$ifdef G_OS_WIN32}
{ You can use this "pseudo file descriptor" in a GPollFD to add
 * polling for Windows messages. GTK applications should not do that.
  }

const
  G_WIN32_MSG_HANDLE = 19981206;  
{ Use this to get a GPollFD from a GIOChannel, so that you can call
 * g_io_channel_win32_poll(). After calling this you should only use
 * g_io_channel_read() to read from the GIOChannel, i.e. never read()
 * from the underlying file descriptor. For SOCKETs, it is possible to call
 * recv().
  }

procedure g_io_channel_win32_make_pollfd(channel:PGIOChannel; condition:TGIOCondition; fd:PGPollFD);cdecl;external;
{ This can be used to wait until at least one of the channels is readable.
 * On Unix you would do a select() on the file descriptors of the channels.
  }
function g_io_channel_win32_poll(fds:PGPollFD; n_fds:Tgint; timeout_:Tgint):Tgint;cdecl;external;
{ Create an IO channel for Windows messages for window handle hwnd.  }
{$if GLIB_SIZEOF_VOID_P == 8}
{ We use gsize here so that it is still an integer type and not a
 * pointer, like the guint in the traditional prototype. We can't use
 * intptr_t as that is not portable enough.
  }

function g_io_channel_win32_new_messages(hwnd:Tgsize):PGIOChannel;cdecl;external;
{$else}

function g_io_channel_win32_new_messages(hwnd:Tguint):PGIOChannel;cdecl;external;
{$endif}
{ Create an IO channel for C runtime (emulated Unix-like) file
 * descriptors. After calling g_io_add_watch() on a IO channel
 * returned by this function, you shouldn't call read() on the file
 * descriptor. This is because adding polling for a file descriptor is
 * implemented on Win32 by starting a thread that sits blocked in a
 * read() from the file descriptor most of the time. All reads from
 * the file descriptor should be done by this internal GLib
 * thread. Your code should call only g_io_channel_read_chars().
  }

function g_io_channel_win32_new_fd(fd:Tgint):PGIOChannel;cdecl;external;
{ Get the C runtime file descriptor of a channel.  }
function g_io_channel_win32_get_fd(channel:PGIOChannel):Tgint;cdecl;external;
{ Create an IO channel for a winsock socket. The parameter should be
 * a SOCKET. Contrary to IO channels for file descriptors (on *Win32),
 * you can use normal recv() or recvfrom() on sockets even if GLib
 * is polling them.
  }
function g_io_channel_win32_new_socket(socket:Tgint):PGIOChannel;cdecl;external;
function g_io_channel_win32_new_stream_socket(socket:Tgint):PGIOChannel;cdecl;external;
procedure g_io_channel_win32_set_debug(channel:PGIOChannel; flag:Tgboolean);cdecl;external;
{$endif}
{$endif}
{ __G_IOCHANNEL_H__  }

implementation

{ was #define dname def_expr }
function G_IO_CHANNEL_ERROR : longint; { return type might be wrong }
  begin
    G_IO_CHANNEL_ERROR:=g_io_channel_error_quark;
  end;

function use_buffer(var a : TGIOChannel) : Tguint;
begin
  use_buffer:=(a.flag0 and bm_TGIOChannel_use_buffer) shr bp_TGIOChannel_use_buffer;
end;

procedure set_use_buffer(var a : TGIOChannel; __use_buffer : Tguint);
begin
  a.flag0:=a.flag0 or ((__use_buffer shl bp_TGIOChannel_use_buffer) and bm_TGIOChannel_use_buffer);
end;

function do_encode(var a : TGIOChannel) : Tguint;
begin
  do_encode:=(a.flag0 and bm_TGIOChannel_do_encode) shr bp_TGIOChannel_do_encode;
end;

procedure set_do_encode(var a : TGIOChannel; __do_encode : Tguint);
begin
  a.flag0:=a.flag0 or ((__do_encode shl bp_TGIOChannel_do_encode) and bm_TGIOChannel_do_encode);
end;

function close_on_unref(var a : TGIOChannel) : Tguint;
begin
  close_on_unref:=(a.flag0 and bm_TGIOChannel_close_on_unref) shr bp_TGIOChannel_close_on_unref;
end;

procedure set_close_on_unref(var a : TGIOChannel; __close_on_unref : Tguint);
begin
  a.flag0:=a.flag0 or ((__close_on_unref shl bp_TGIOChannel_close_on_unref) and bm_TGIOChannel_close_on_unref);
end;

function is_readable(var a : TGIOChannel) : Tguint;
begin
  is_readable:=(a.flag0 and bm_TGIOChannel_is_readable) shr bp_TGIOChannel_is_readable;
end;

procedure set_is_readable(var a : TGIOChannel; __is_readable : Tguint);
begin
  a.flag0:=a.flag0 or ((__is_readable shl bp_TGIOChannel_is_readable) and bm_TGIOChannel_is_readable);
end;

function is_writeable(var a : TGIOChannel) : Tguint;
begin
  is_writeable:=(a.flag0 and bm_TGIOChannel_is_writeable) shr bp_TGIOChannel_is_writeable;
end;

procedure set_is_writeable(var a : TGIOChannel; __is_writeable : Tguint);
begin
  a.flag0:=a.flag0 or ((__is_writeable shl bp_TGIOChannel_is_writeable) and bm_TGIOChannel_is_writeable);
end;

function is_seekable(var a : TGIOChannel) : Tguint;
begin
  is_seekable:=(a.flag0 and bm_TGIOChannel_is_seekable) shr bp_TGIOChannel_is_seekable;
end;

procedure set_is_seekable(var a : TGIOChannel; __is_seekable : Tguint);
begin
  a.flag0:=a.flag0 or ((__is_seekable shl bp_TGIOChannel_is_seekable) and bm_TGIOChannel_is_seekable);
end;


end.
